# owasp-zap-mcp

./: .actrc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .tool-versions  LICENSE  LICENSE_HEADER.txt  README.md  conftest.py  docker-compose.yml  mypy.ini  pytest.ini  run_tests.py  test_mcp_fix.py
.cursor/: mcp.json
.cursor/rules/: owasp_zap_scanning.mdc
.devcontainer/: README.md  devcontainer.json  docker-compose.yml  fix-permissions.sh
.github/workflows/: .actrc  build-docker-local.yml  build-docker-simple.yml  build-docker.yml  premerge.yml
debugging/: test_mcp_params.py  test_sse_params.py
docs/: architecture.md  development-tips.ai.md  development.md  docker.md  scripts.md  threatmodel.md
owasp_zap_mcp/: .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py  test_direct_tools.py  test_mcp_interface.py
owasp_zap_mcp/docs/: development-tips.ai.md
owasp_zap_mcp/src/owasp_zap_mcp/: __init__.py  config.py  main.py  mcp_core.py  server.py  sse_server.py  zap_client.py
owasp_zap_mcp/src/owasp_zap_mcp/tools/: __init__.py  analysis_tools.py  proxy_tools.py  scan_tools.py  tool_initializer.py  zap_tools.py
owasp_zap_mcp/tests/: README.md  __init__.py  conftest.py  test_error_scenarios.py  test_integration.py  test_mcp_interface_regression.py  test_mcp_params.py  test_mcp_tools.py  test_performance.py  test_sse_params.py  test_sse_server.py  test_zap_client.py
scripts/: dev-setup.sh  dev-start.sh  dev-stop.sh  manual-integration-test.py  manual_integration_script.py  rebuild.sh  setup-dev.sh  start.sh  stop.sh  test.sh  test_mcp_params.py  test_sse_params.py
