[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owasp-zap-mcp"
version = "0.1.0"
description = "Independent MCP Server for OWASP ZAP security scanning integration (not affiliated with OWASP Foundation)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "ashmere"}
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "zaproxy==0.4.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "pre-commit>=3.6.0",
    "safety>=3.0.0"
]

[project.scripts]
# Entry point for stdio mode
owasp-zap-mcp = "owasp_zap_mcp.mcp_core:run_stdio"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["owasp_zap_mcp", "owasp_zap_mcp.tools"]

[tool.setuptools.package-data]
owasp_zap_mcp = ["*.py"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert_used test
